documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P61W32API BOOL __stdcall DRV629_HandleOkay(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_HandleOpen(LPCSTR cardname,INT segval,INT portval,INT irqval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_HandleVer(HCARD handleval);

P61W32API VOID __stdcall DRV629_IMAFS(HCARD handleval);

P61W32API USHORT __stdcall DRV629_Index(HCARD handleval);

P61W32API VOID __stdcall DRV629_InfoClear(VOID);

P61W32API ULONG __stdcall DRV629_InfoGetDesc(VOID);

P61W32API USHORT __stdcall DRV629_InfoGetFlag(VOID);

P61W32API ULONG __stdcall DRV629_InfoGetLine(VOID);

P61W32API USHORT __stdcall DRV629_InfoGetType(VOID);

P61W32API VOID __stdcall DRV629_InfoSet(USHORT infotype,ULONG infoline,ULONG infodesc);

P61W32API ERRVAL __stdcall DRV629_Insert(USHORT selval,USHORT segval,USHORT portval,USHORT irqval);

P61W32API ERRVAL __stdcall DRV629_IntDisable(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_IntEnable(USHORT options,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_IntInstall(LPVOID hEvent,USHORT options,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_IntUninstall(HCARD handleval);

P61W32API USHORT __stdcall DRV629_Isalnum(USHORT value);

P61W32API USHORT __stdcall DRV629_Isalpha(USHORT value);

P61W32API USHORT __stdcall DRV629_Isascii(USHORT value);

P61W32API USHORT __stdcall DRV629_Iscntrl(USHORT value);

P61W32API USHORT __stdcall DRV629_Isdigit(USHORT value);

P61W32API USHORT __stdcall DRV629_Isgraph(USHORT value);

P61W32API USHORT __stdcall DRV629_Ishexstr(LPSTR str);

P61W32API USHORT __stdcall DRV629_Islower(USHORT value);

P61W32API BOOL __stdcall DRV629_IsOn(HCARD handleval);

P61W32API USHORT __stdcall DRV629_Isprint(USHORT value);

P61W32API USHORT __stdcall DRV629_Ispunct(USHORT value);

P61W32API USHORT __stdcall DRV629_Isseparate(USHORT value);

P61W32API USHORT __stdcall DRV629_Isspace(USHORT value);

P61W32API USHORT __stdcall DRV629_Isupper(USHORT value);

P61W32API USHORT __stdcall DRV629_Isxdigit(USHORT value);

P61W32API ERRVAL __stdcall DRV629_KernEnd(LPVOID vxdptr);

P61W32API ERRVAL __stdcall DRV629_KernIntClear(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIntInstall(LPVOID hEvent,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIntUninstall(HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIOEmptyB(LPBYTE valueptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIOFillB(BYTE value,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIORdB(LPBYTE valueptr,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIORdsB(LPBYTE valueptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIORdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIOWrB(BYTE value,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIOWrsB(LPBYTE valueptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernIOWrW(USHORT value,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMFillW(USHORT value,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMRdB(LPBYTE valueptr,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMRdL(LPULONG valueptr,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMRdsL(LPULONG bufptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMRdsW(LPUSHORT bufptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMRdW(LPUSHORT valueptr,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMWrB(BYTE value,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMWrL(ULONG value,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMWrsL(LPULONG bufptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMWrsW(LPUSHORT bufptr,INT addrval,INT countval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernMEMWrW(USHORT value,INT addrval,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernQuick(BOOL flag,HCARD handleval);

P61W32API ERRVAL __stdcall DRV629_KernStatusEx(LPULONG valueptr,ULONG type,ULONG index,HCARD handleval);

P61W32API VOID __stdcall DRV629_LineClr(VOID);

P61W32API ULONG __stdcall DRV629_LineGet(VOID);

P61W32API VOID __stdcall DRV629_LineInc(VOID);

P61W32API ULONG __stdcall DRV629_MakeLong(USHORT valh,USHORT vall);

P61W32API ULONG __stdcall DRV629_Mask(ULONG dataval,USHORT cntval);

P61W32API ULONG __stdcall DRV629_MemCrc(USHORT addrval,USHORT cntval,HCARD handleval);

P61W32API ULONG __stdcall DRV629_MemCrcVal(ULONG crc,BYTE value);

P61W32API USHORT __stdcall DRV629_MemRdB(USHORT addrval,HCARD handleval);

P61W32API ULONG __stdcall DRV629_MemRdL(USHORT addrval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemRdsW(LPVOID dataptr,USHORT addrval,USHORT cntval,HCARD handleval);

P61W32API USHORT __stdcall DRV629_MemRdW(USHORT addrval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemStosW(USHORT addrval,USHORT dataval,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemStosWR(USHORT addrval,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemWrB(USHORT addrval,USHORT dataval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemWrL(USHORT addrval,ULONG dataval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemWrsW(USHORT addrval,LPVOID dataptr,USHORT cntval,HCARD handleval);

P61W32API VOID __stdcall DRV629_MemWrW(USHORT addrval,USHORT dataval,HCARD handleval);

P61W32API ULONG __stdcall DRV629_Mod(ULONG moda,ULONG modb);

P61W32API ULONG __stdcall DRV629_Mul(ULONG mula,ULONG mulb);

P61W32API VOID __stdcall DRV629_Nocomment(LPSTR str);

P61W32API ERRVAL __stdcall DRV629_OpExec(USHORT opcode,ULONG value,HCARD handleval);

P61W32API USHORT __stdcall DRV629_OpGet(LPCSTR opstr);

P61W32API USHORT __stdcall DRV629_PortInB(USHORT addrval,HCARD handleval);