documentacion/obtenida/ARINC 429/driver and software/PC629-1/API/P61W32NET.VB

    Public Declare Function DRV629_HandleOkay Lib "P61W32.DLL" Alias "_DRV629_HandleOkay@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_HandleOpen Lib "P61W32.DLL" Alias "_DRV629_HandleOpen@20" (ByRef cardname As String, ByVal segval As Int32, ByVal portval As Int32, ByVal irqval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_HandleVer Lib "P61W32.DLL" Alias "_DRV629_HandleVer@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub DRV629_IMAFS Lib "P61W32.DLL" Alias "_DRV629_IMAFS@4" (ByVal handleval As UInt32)
    Public Declare Function DRV629_Index Lib "P61W32.DLL" Alias "_DRV629_Index@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Sub DRV629_InfoClear Lib "P61W32.DLL" Alias "_DRV629_InfoClear@0" ()
    Public Declare Function DRV629_InfoGetDesc Lib "P61W32.DLL" Alias "_DRV629_InfoGetDesc@0" () As UInt32
    Public Declare Function DRV629_InfoGetFlag Lib "P61W32.DLL" Alias "_DRV629_InfoGetFlag@0" () As UInt16
    Public Declare Function DRV629_InfoGetLine Lib "P61W32.DLL" Alias "_DRV629_InfoGetLine@0" () As UInt32
    Public Declare Function DRV629_InfoGetType Lib "P61W32.DLL" Alias "_DRV629_InfoGetType@0" () As UInt16
    Public Declare Sub DRV629_InfoSet Lib "P61W32.DLL" Alias "_DRV629_InfoSet@12" (ByVal infotype As UInt16, ByVal infoline As UInt32, ByVal infodesc As UInt32)
    Public Declare Function DRV629_Insert Lib "P61W32.DLL" Alias "_DRV629_Insert@16" (ByVal selval As UInt16, ByVal segval As UInt16, ByVal portval As UInt16, ByVal irqval As UInt16) As Int32
    Public Declare Function DRV629_IntDisable Lib "P61W32.DLL" Alias "_DRV629_IntDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_IntEnable Lib "P61W32.DLL" Alias "_DRV629_IntEnable@8" (ByVal optionvals As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_IntInstall Lib "P61W32.DLL" Alias "_DRV629_IntInstall@12" (ByVal hevent As IntPtr, ByVal optionvals As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_IntUninstall Lib "P61W32.DLL" Alias "_DRV629_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_Isalnum Lib "P61W32.DLL" Alias "_DRV629_Isalnum@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isalpha Lib "P61W32.DLL" Alias "_DRV629_Isalpha@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isascii Lib "P61W32.DLL" Alias "_DRV629_Isascii@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Iscntrl Lib "P61W32.DLL" Alias "_DRV629_Iscntrl@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isdigit Lib "P61W32.DLL" Alias "_DRV629_Isdigit@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isgraph Lib "P61W32.DLL" Alias "_DRV629_Isgraph@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Ishexstr Lib "P61W32.DLL" Alias "_DRV629_Ishexstr@4" (ByRef str As String) As UInt16
    Public Declare Function DRV629_Islower Lib "P61W32.DLL" Alias "_DRV629_Islower@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_IsOn Lib "P61W32.DLL" Alias "_DRV629_IsOn@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_Isprint Lib "P61W32.DLL" Alias "_DRV629_Isprint@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Ispunct Lib "P61W32.DLL" Alias "_DRV629_Ispunct@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isseparate Lib "P61W32.DLL" Alias "_DRV629_Isseparate@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isspace Lib "P61W32.DLL" Alias "_DRV629_Isspace@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isupper Lib "P61W32.DLL" Alias "_DRV629_Isupper@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_Isxdigit Lib "P61W32.DLL" Alias "_DRV629_Isxdigit@4" (ByVal value As UInt16) As UInt16
    Public Declare Function DRV629_KernEnd Lib "P61W32.DLL" Alias "_DRV629_KernEnd@4" (ByVal vxdptr As IntPtr) As Int32
    Public Declare Function DRV629_KernIntClear Lib "P61W32.DLL" Alias "_DRV629_KernIntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIntInstall Lib "P61W32.DLL" Alias "_DRV629_KernIntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIntUninstall Lib "P61W32.DLL" Alias "_DRV629_KernIntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIOEmptyB Lib "P61W32.DLL" Alias "_DRV629_KernIOEmptyB@16" (ByRef valueptr As Byte, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIOFillB Lib "P61W32.DLL" Alias "_DRV629_KernIOFillB@16" (ByVal value As Byte, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIORdB Lib "P61W32.DLL" Alias "_DRV629_KernIORdB@12" (ByRef valueptr As Byte, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIORdsB Lib "P61W32.DLL" Alias "_DRV629_KernIORdsB@16" (ByRef valueptr As Byte, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIORdW Lib "P61W32.DLL" Alias "_DRV629_KernIORdW@12" (ByRef valueptr As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIOWrB Lib "P61W32.DLL" Alias "_DRV629_KernIOWrB@12" (ByVal value As Byte, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIOWrsB Lib "P61W32.DLL" Alias "_DRV629_KernIOWrsB@16" (ByRef valueptr As Byte, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernIOWrW Lib "P61W32.DLL" Alias "_DRV629_KernIOWrW@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMFillW Lib "P61W32.DLL" Alias "_DRV629_KernMEMFillW@16" (ByVal value As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMRdB Lib "P61W32.DLL" Alias "_DRV629_KernMEMRdB@12" (ByRef valueptr As Byte, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMRdL Lib "P61W32.DLL" Alias "_DRV629_KernMEMRdL@12" (ByRef valueptr As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMRdsL Lib "P61W32.DLL" Alias "_DRV629_KernMEMRdsL@16" (ByRef bufptr As UInt32, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMRdsW Lib "P61W32.DLL" Alias "_DRV629_KernMEMRdsW@16" (ByRef bufptr As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMRdW Lib "P61W32.DLL" Alias "_DRV629_KernMEMRdW@12" (ByRef valueptr As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMWrB Lib "P61W32.DLL" Alias "_DRV629_KernMEMWrB@12" (ByVal value As Byte, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMWrL Lib "P61W32.DLL" Alias "_DRV629_KernMEMWrL@12" (ByVal value As UInt32, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMWrsL Lib "P61W32.DLL" Alias "_DRV629_KernMEMWrsL@16" (ByRef bufptr As UInt32, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMWrsW Lib "P61W32.DLL" Alias "_DRV629_KernMEMWrsW@16" (ByRef bufptr As UInt16, ByVal addrval As Int32, ByVal countval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernMEMWrW Lib "P61W32.DLL" Alias "_DRV629_KernMEMWrW@12" (ByVal value As UInt16, ByVal addrval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernQuick Lib "P61W32.DLL" Alias "_DRV629_KernQuick@8" (ByVal flag As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_KernStatusEx Lib "P61W32.DLL" Alias "_DRV629_KernStatusEx@16" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal index As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Sub DRV629_LineClr Lib "P61W32.DLL" Alias "_DRV629_LineClr@0" ()
    Public Declare Function DRV629_LineGet Lib "P61W32.DLL" Alias "_DRV629_LineGet@0" () As UInt32
    Public Declare Sub DRV629_LineInc Lib "P61W32.DLL" Alias "_DRV629_LineInc@0" ()
    Public Declare Function DRV629_MakeLong Lib "P61W32.DLL" Alias "_DRV629_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function DRV629_Mask Lib "P61W32.DLL" Alias "_DRV629_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function DRV629_MemCrc Lib "P61W32.DLL" Alias "_DRV629_MemCrc@12" (ByVal addrval As UInt16, ByVal cntval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function DRV629_MemCrcVal Lib "P61W32.DLL" Alias "_DRV629_MemCrcVal@8" (ByVal crc As UInt32, ByVal value As Byte) As UInt32
    Public Declare Function DRV629_MemRdB Lib "P61W32.DLL" Alias "_DRV629_MemRdB@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function DRV629_MemRdL Lib "P61W32.DLL" Alias "_DRV629_MemRdL@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Sub DRV629_MemRdsW Lib "P61W32.DLL" Alias "_DRV629_MemRdsW@16" (ByVal dataptr As IntPtr, ByVal addrval As UInt16, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Function DRV629_MemRdW Lib "P61W32.DLL" Alias "_DRV629_MemRdW@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub DRV629_MemStosW Lib "P61W32.DLL" Alias "_DRV629_MemStosW@16" (ByVal addrval As UInt16, ByVal dataval As UInt16, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_MemStosWR Lib "P61W32.DLL" Alias "_DRV629_MemStosWR@12" (ByVal addrval As UInt16, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_MemWrB Lib "P61W32.DLL" Alias "_DRV629_MemWrB@12" (ByVal addrval As UInt16, ByVal dataval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_MemWrL Lib "P61W32.DLL" Alias "_DRV629_MemWrL@12" (ByVal addrval As UInt16, ByVal dataval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub DRV629_MemWrsW Lib "P61W32.DLL" Alias "_DRV629_MemWrsW@16" (ByVal addrval As UInt16, ByVal dataptr As IntPtr, ByVal cntval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub DRV629_MemWrW Lib "P61W32.DLL" Alias "_DRV629_MemWrW@12" (ByVal addrval As UInt16, ByVal dataval As UInt16, ByVal handleval As UInt32)
    Public Declare Function DRV629_Mod Lib "P61W32.DLL" Alias "_DRV629_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function DRV629_Mul Lib "P61W32.DLL" Alias "_DRV629_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Sub DRV629_Nocomment Lib "P61W32.DLL" Alias "_DRV629_Nocomment@4" (ByRef str As String)
    Public Declare Function DRV629_OpExec Lib "P61W32.DLL" Alias "_DRV629_OpExec@12" (ByVal opcode As UInt16, ByVal value As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function DRV629_OpGet Lib "P61W32.DLL" Alias "_DRV629_OpGet@4" (ByRef opstr As String) As UInt16
    Public Declare Function DRV629_PortInB Lib "P61W32.DLL" Alias "_DRV629_PortInB@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
